0024706: Solids produced by BOP do not have flag Closed set in shells

Flag CLOSED is set for closed shells created during perform of Boolean Operation.
Test cases for issue CR24706